fix broken layout on mobile screens

--- a/src/app/components/MainContent/Skills/Skills.css
+++ b/src/app/components/MainContent/Skills/Skills.css
@@ -22,6 +22,8 @@
   position: relative;
   padding: 1.25rem;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 2rem;
 }
 
